--- a/about.html
+++ b/about.html
@@ -57,9 +57,49 @@
 	<div class="about-copy">
 		<div class="w3-col m1 s12 w3-container"><div class="dead"><p>Y</p></div></div>
 		<div class="w3-col m10 s12">
-			<p class="about-sans">Hey! Welcome to the world of Le Puzz.</p> 
+			<p class="about-sans">A few reasons we love Le Puzz jigsaw puzzles:</p> 
 
-			<p>We love jigsaw puzzles! We collect them, we do them with friends and family, we give them away and trade them when we’re finished. We especially love collecting vintage puzzles from the 60s, 70s and 80s with an odd sense of humor. We love old puzzle box illustrations, silly copy, weird jigsaw shapes and of course interesting images.  There really isn't anything like that feeling of finishing a puzzle and running you hand over it, then trying to pick it up off the table in one piece. We started Le Puzz with all of this in mind and set out to create a puzzle experience that we thought was fun and we hope you enjoy as well. Join us as we get lost, zone out, look for edge pieces, make a snack, laugh, focus and hopefully find our inner piece.</p> 
+			<p>1. Arrives broken on purpose and only gets better.
+
+2. Each dieline is drawn by hand and random cut to ensure each piece is totally unique.
+
+3. Earth Friendly - we use paper from sustainable forests.
+
+4. Can do while eating or drinking, but please use a coaster.
+
+5. They say puzzles make you smarter (and it’s true!).
+
+6. Can be enjoyed with friends or all alone.
+
+7. There's a game on the back of each box in case you need a puzzle break - solvable with a dry erase marker.
+
+8. Made by two very silly friends in Brooklyn.
+
+9. Looks good unsolved in the box on your shelf.
+
+10. Feels impossible, gets easier.
+
+11. For every puzzle you buy we donate $1 to the Boys and Girls Club of America.
+
+12. Gets organized by nature.
+
+13. No need to leave the house.
+
+14. The back of the pieces are as pretty as the front.
+
+15. Is an easy way to zone out, meditate or concentrate.
+
+16. Our 500 piece puzzles are made extra thick for a snug fit - try and pick it up in one piece!
+
+17. Each puzzle includes a fold-out poster.
+
+18. Includes a resealable bag - fingers crossed, no more lost pieces!
+
+19. Has an end goal but no rules.
+
+20. Everything you need is in one box.
+
+</p> 
 
 			<p class="about-sans">Coming Soon | Fall 2021</p>
 			<p class="about-sans close"><a href="index.html">CLOSE (X)</a></p> 
