--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- LITTLE TROOP 2020-->
+<!-- LE PUZZ 2021-->
 <!-- HI FRIENDS-->
 <html>
 <head>
@@ -13,7 +13,7 @@
   gtag('config', 'G-1B310RP2V2');
 </script>
 <title>LE PUZZ</title>
-<meta name="description" content="Little Troop is a design partnership based in Brooklyn, New York.">
+<meta name="description" content="Le Puzz Puzzles - Find your inner piece">
 <meta name="author" content="Le Puzz">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,8 +21,6 @@
 <link href="css/splash.css" rel="stylesheet">
 <link href="css/splash_small.css" rel="stylesheet">
 <link href="css/fonts/stylesheet.css" rel="stylesheet">	
-<script type="text/javascript" async 
- src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V3dpdk"></script>
 
 <link rel="icon" href="css/img/favicon.ico">
 
@@ -57,51 +55,34 @@
 	<div class="about-copy">
 		<div class="w3-col m1 s12 w3-container"><div class="dead"><p>Y</p></div></div>
 		<div class="w3-col m10 s12">
-			<p class="about-sans">A few reasons we love Le Puzz jigsaw puzzles:</p> 
+			
+			<p class="about-sans">Reasons we love Le Puzz Jigsaw Puzzles</p> 
 
-			<p>1. Arrives broken on purpose and only gets better.
+			<p>
+1. Each dieline is drawn by hand and random cut to ensure each piece is totally unique.<br/>
 
-2. Each dieline is drawn by hand and random cut to ensure each piece is totally unique.
+2. Earth Friendly &mdash; we use paper from sustainable forests.<br/>
 
-3. Earth Friendly - we use paper from sustainable forests.
+3. There's a game on the back of each box in case you need a puzzle break &mdash; solvable with a dry erase marker.<br/>
 
-4. Can do while eating or drinking, but please use a coaster.
+4. Made by two very silly friends in Brooklyn.<br/>
 
-5. They say puzzles make you smarter (and it’s true!).
+5. Looks good unsolved in the box on your shelf.<br/>
 
-6. Can be enjoyed with friends or all alone.
+6. For every puzzle you buy we donate $1 to the Boys and Girls Club of America.<br/>
 
-7. There's a game on the back of each box in case you need a puzzle break - solvable with a dry erase marker.
+7. The back of the pieces are as pretty as the front.<br/>
 
-8. Made by two very silly friends in Brooklyn.
+8. Our 500 piece puzzles are made extra thick for a snug fit &mdash; try and pick it up in one piece!<br/>
 
-9. Looks good unsolved in the box on your shelf.
+9. Each puzzle includes a fold-out poster.<br/>
 
-10. Feels impossible, gets easier.
+10. Includes a resealable bag &mdash; fingers crossed, no more lost pieces!<br/>
 
-11. For every puzzle you buy we donate $1 to the Boys and Girls Club of America.
-
-12. Gets organized by nature.
-
-13. No need to leave the house.
-
-14. The back of the pieces are as pretty as the front.
-
-15. Is an easy way to zone out, meditate or concentrate.
-
-16. Our 500 piece puzzles are made extra thick for a snug fit - try and pick it up in one piece!
-
-17. Each puzzle includes a fold-out poster.
-
-18. Includes a resealable bag - fingers crossed, no more lost pieces!
-
-19. Has an end goal but no rules.
-
-20. Everything you need is in one box.
 
 </p> 
 
-			<p class="about-sans">Coming Soon | Fall 2021</p>
+			<p class="about-sans">Available for Pre-Order this Summer <br/>Arriving at your door Fall 2021</p> 
 			<p class="about-sans close"><a href="index.html">CLOSE (X)</a></p> 
 		</div>
 	</div>
