--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- LITTLE TROOP 2020-->
+<!-- LE PUZZ 2021-->
 <!-- HI FRIENDS-->
 <html>
 <head>
@@ -13,7 +13,7 @@
   gtag('config', 'G-1B310RP2V2');
 </script>
 <title>LE PUZZ</title>
-<meta name="description" content="Little Troop is a design partnership based in Brooklyn, New York.">
+<meta name="description" content="Le Puzz Puzzles - Find your inner piece">
 <meta name="author" content="Le Puzz">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,8 +21,7 @@
 <link href="css/splash.css" rel="stylesheet">
 <link href="css/splash_small.css" rel="stylesheet">
 <link href="css/fonts/stylesheet.css" rel="stylesheet">	
-<script type="text/javascript" async 
- src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V3dpdk"></script>
+<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V3dpdk"></script>
 
 <link rel="icon" href="css/img/favicon.ico">
 
