--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 
 9. Each puzzle includes a fold-out poster.<br/>
 
-10. Includes a resealable bag &mdash; fingers crossed, no more lost pieces!<br/>
+10. Includes a resealable bag &mdash; no more lost pieces!<br/>
 
 
 </p> 
