--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <body>
 	
+
+	
 <header class="header">
 		<div class="header_content">
 						
@@ -85,7 +87,9 @@
 
 
 		
-
+<div id="preload">
+	<img src="css/img/sneakpeek.gif" />
+</div>
 
 		
 
