--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-1B310RP2V2');
 </script>
 <title>LE PUZZ</title>
-<meta name="description" content="Le Puzz Puzzles - Find your inner piece">
+<meta name="description" content="Le Puzz Puzzles - Why we love Le Puzz puzzles!">
 <meta name="author" content="Le Puzz">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
