--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-1B310RP2V2');
 </script>
 <title>LE PUZZ</title>
-<meta name="description" content="Le Puzz Puzzles - Find your inner piece">
+<meta name="description" content="Le Puzz is new fun and funky jigsaw puzzle company launching later this summer, arriving at your door fall 2021.">
 <meta name="author" content="Le Puzz">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
